--- a/ErrorReporting/app/build.gradle
+++ b/ErrorReporting/app/build.gradle
@@ -24,4 +24,13 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //noinspection GradleDependency
     compile 'com.android.support:appcompat-v7:23.3.0'
+    androidTestCompile 'junit:junit:4.12'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestCompile 'org.mockito:mockito-core:1.10.8'
+    androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.1'
+    androidTestCompile "org.mockito:mockito-core:1.10.19"
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
