--- a/ErrorReporting/app/build.gradle
+++ b/ErrorReporting/app/build.gradle
@@ -34,3 +34,6 @@ dependencies {
     testCompile 'org.mockito:mockito-core:1.10.19'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
 }
+configurations.all {
+    resolutionStrategy.force 'com.android.support:support-annotations:22.1.0'
+}
